Closed
Bug 792529
Opened 8 years ago
Closed 8 years ago
ASSERTION: VibratorRunnable not thread-safe
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: dhylands, Assigned: dhylands)
Details
Attachments
(1 file)
1.07 KB,
patch
|
qdot
:
review+
|
Details | Diff | Splinter Review |
I'm seeing the following assertions on my otoro in logcat: ###!!! ASSERTION: VibratorRunnable not thread-safe: '_mOwningThread.GetThread() == PR_GetCurrentThread()', file /home/work/mozilla-inbound/hal/gonk/GonkHal.cpp, line 138
Assignee | ||
Comment 1•8 years ago
|
||
Attachment #662683 -
Flags: review?(kyle)
Updated•8 years ago
|
Attachment #662683 -
Flags: review?(kyle) → review+
Comment 2•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/b359ecd8af2e
Assignee: nobody → dhylands
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•8 years ago
|
Assignee: dhylands → dhylands
You need to log in
before you can comment on or make changes to this bug.
Description
•