Bug 792529 - ASSERTION: VibratorRunnable not thread-safe. r=qDot